--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="home" id="homePage">
             <img src="./img/homeBG.jpg" alt="">
             <div class="content">
-                <h1>Dr. El Kihal<br><span>Anouar</span></h1>
+                <h1>Dr. Cognome<br><span>Nome</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="#contattiPage">Contattami</a>
             </div>
